spacing tweaks + footer fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,38 +2,30 @@
 
 :root {
     --purple: #4c1434;
+    --light-purple: #a71c68;
+    --pink: #e8b4d1;
     --white: #ffffff;
     --white-text: #fcfbfb;
     --input: #d9d9d9;
     --error: #411a1a;
     --border-bg: #ebebeb;
-  }
-
-
-/* page background */
-.stMain {
-    background-color: var(--white);
 }
 
-/* header container */
-.st-key-header {
-    background-color: var(--white);
+hr {
+      margin-top: 0px;
 }
-
+    
 body {
     text-align: center;
-    display: flex;
-    flex-direction: column;
-    /* justify-content: flex-start; */
 }
 
 #expimg {
     max-width: 100%;
     height: auto;
-
-     @media (min-width: 724px)  {
+    
+    @media (min-width: 724px)  {
         max-width: 500px;
-     }
+    }
 }
 
 #title1 {
@@ -43,17 +35,46 @@ body {
     color: var(--purple);
 }
 
+[data-testid="stMainBlockContainer"] {
+    padding-bottom: 0%;
+    min-height: 100vh;
+}
+
 [data-testid="stVerticalBlockBorderWrapper"] {
     border-color: var(--purple);
     border-radius: 10px;
     border-width: 0.5rem;
-
+    
 }
+
+[data-testid="stHeader"] {
+    background-color: var(--purple);
+    color: var(--white-text);
+}
+
 
 [data-testid="stAlertContainer"] {
     color: var(--error);
 }
 
+/* page background */
+.stMain {
+    background-color: var(--white);
+
+}
+
+/* header container */
+.st-key-header {
+    background-color: var(--white);
+}
+
+.st-key-body {
+    margin-top: 5vh;
+}
+
+.logo {
+    margin-left: 3%;
+}
 
 .stTabs [data-baseweb="tab-list"] {
     justify-content: center;
@@ -80,15 +101,13 @@ body {
 
 .stTabs [aria-selected="true"] {
     background-color: var(--border-bg);
-    /* color: var(--white-text); */
 }
 
 .st-key-footer {
-    /* display: inline-block; */
     background-color: var(--purple);
     color: var(--white-text);
     padding-top: 2rem;
-    padding-bottom: 2rem;
+    padding-bottom: 35vh;
     text-align: center;
     min-width: 100vw;
     align-self: center;
